@@ -1,5 +1,10 @@
 2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
+	* flumotion/component/dvb/dvbbin.py:
+	Remove old unused experimental code.
+
+2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
 	* flumotion/component/dvb/admin_gtk.py:
 	* flumotion/component/dvb/dvb.py:
 	* flumotion/component/dvb/dvb.xml:
